@@ -21,8 +21,11 @@ package org.apache.cassandra.io.compress;
 import java.io.*;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 
 import org.apache.cassandra.config.ConfigurationException;
+import org.apache.cassandra.io.sstable.Component;
+import org.apache.cassandra.io.sstable.Descriptor;
 import org.apache.cassandra.io.util.FileUtils;
 
 /**
@@ -36,7 +39,53 @@ public class CompressionMetadata
     public final String indexFilePath;
     public final CompressionParameters parameters;
 
-    public CompressionMetadata(String indexFilePath, long compressedLength) throws IOException
+    /**
+     * Caches instances of CompressionMetadata.
+     * Each metada holds the chunk offsets index, which is reasonably big for
+     * enough data, so it's an expensive structure. We thus only want one
+     * CompressionMetadata created for each sstable.
+     * Note that we could have a compressionMetadata field in SSTableReader,
+     * but CompressedSegmentFile.Builder needs it before the reader is
+     * created, so it's easier that way.
+     */
+    private final static Map<String, CompressionMetadata> cache = new ConcurrentHashMap<String, CompressionMetadata>();
+
+    /**
+     * Get metadata about given compressed file including uncompressed data length, chunk size
+     * and list of the chunk offsets of the compressed data.
+     *
+     * @param dataFilePath Path to the compressed file
+     *
+     * @return metadata about given compressed file.
+     */
+    public static CompressionMetadata get(String dataFilePath)
+    {
+        CompressionMetadata metadata = cache.get(dataFilePath);
+        if (metadata != null)
+            return metadata;
+
+        // We want this to be relatively fast, because it's called often (for each
+        // range query). On the side, we don't care too much if the initial
+        // creation is no thread-safe, because we'll call this when the
+        // SSTableReader is loaded/created, so we're pretty sure there won't
+        // be any contention. Besides, if we really do create two
+        // CompressionMetadata, it's not the end of the world, so we don't
+        // bother with synchronization
+        Descriptor desc = Descriptor.fromFilename(dataFilePath);
+        try
+        {
+            metadata = new CompressionMetadata(desc.filenameFor(Component.COMPRESSION_INFO), new File(dataFilePath).length());
+            cache.put(dataFilePath, metadata);
+            return metadata;
+        }
+        catch (IOException e)
+        {
+            throw new IOError(e);
+        }
+    }
+
+    // This is package protected because of the tests. Don't use, use get() instead.
+    CompressionMetadata(String indexFilePath, long compressedLength) throws IOException
     {
         this.indexFilePath = indexFilePath;
 
